# Tick

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: requirements.md
tests/: test_app_integration.py  test_models.py  test_services.py  test_storage.py
tick/: __init__.py  __main__.py
tick/core/: __init__.py  models.py  services.py
tick/storage/: json_store.py
tick/tui/: __init__.py  app.py  screens.py
