[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tick"
version = "0.1.0"
description = "Terminal TUI todo tool with Vim-like interaction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.61.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
tick = "tick.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tick*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
